# Embarcatech-Etapa-2---Projeto-Final-firmware

./: .gitmodules  CMakeLists.txt  Doxyfile  FreeRTOSConfig.h  LICENSE  README.md  lwipopts copy.h  lwipopts.h  mqtt_utils.c  rack_inteligente.cpp
docs/: BITDOGLAB_PINS.md  tutorial-freertos-hooks.md
inc/: CMakeLists.txt  freertos_app_sizing.h  keyboard_menu_parameters.h  keyboard_parameters.h  mqtt_utils.h  rack_inteligente.h  rack_inteligente_network_parametros.h  rack_inteligente_parametros.h
lib/AHT10/: CMakeLists.txt  aht10.cpp  aht10.h
lib/I2C-proxy/: CMakeLists.txt
lib/MPU6050/: CMakeLists.txt  MPU6050.cpp
lib/OLED_SSD1306/: CMakeLists.txt  oled.c  oled.h  oled_freeRTOS.c  oled_freeRTOS.h  ssd1306_i2c.c  ssd1306_i2c.h
lib/flash_persist/: CMakeLists.txt  flash_persist.c
lib/rtos_analysis/: CMakeLists.txt  rtos_monitor.c  rtos_trace.c  rtos_trace.h  wcet_probe.c  wcet_probe.h
task.bck/: door_state_oled_task.c  door_state_oled_task.h  gps_oled_task.c  gps_oled_task.h  humidity_oled_task.c  humidity_oled_task.h  temperature_oled_task.c  temperature_oled_task.h  tilt_oled_task.c  tilt_oled_task.h
tasks/: CMakeLists.txt  buzzer_pwm_task.c  buzzer_pwm_task.h  command_mqtt_task.c  command_mqtt_task.h  door_servo_task.c  door_servo_task.h  door_state_callback.c  door_state_callback.h  door_state_mqtt_task.c  door_state_mqtt_task.h  door_state_task.c  gpio_state_callback.c  gpio_state_callback.h  gps_mqtt_task.c  gps_mqtt_task.h  gps_task.c  gps_task.h  humidity_mqtt_task.c  humidity_mqtt_task.h  network_poll_task.c  oled_status_task.c  oled_status_task.h  rack_event_groups.c  rack_event_groups.h  rtos_monitor.c  rtos_monitor.h  signs_on_task.c  signs_on_task.h  temperature_humidity_task.cpp  temperature_humidity_task.hpp  temperature_mqtt_task.c  temperature_mqtt_task.h  tilt_mqtt_task.c  tilt_mqtt_task.h  tilt_task.cpp  tilt_task.hpp  watchdog_task.c  watchdog_task.h
